fix a margin error that affected the logo on mobile devices

--- a/django-dispensa/wheelie/client/scss/layout/_header.scss
+++ b/django-dispensa/wheelie/client/scss/layout/_header.scss
@@ -80,6 +80,10 @@
 
   &.sticky-header-logo-dispensa63 {
     margin: 0 0 0 5%;
+    
+    @media #{$small} {
+      margin-top: 15px;
+    }
   }
 }
 
